instance tab + mod manager merged

--- a/Frontend/src/assets/locales/en-US.json
+++ b/Frontend/src/assets/locales/en-US.json
@@ -32,7 +32,9 @@
     "never": "Never",
     "exporting": "Exporting...",
     "importing": "Importing...",
-    "Latest": "Latest"
+    "Latest": "Latest",
+    "refresh": "Refresh",
+    "unknown": "Unknown"
   },
   "app": {
     "title": "HyPrism",
@@ -276,6 +278,7 @@
     "import": "Import",
     "storage": "Storage",
     "noInstances": "No instances installed",
+    "addInstance": "Add Instance",
     "downloadFromDashboard": "Download a game version from the Dashboard",
     "exportedSuccess": "Instance exported successfully",
     "exportFailed": "Failed to export instance",
@@ -284,7 +287,20 @@
     "importedSuccess": "Instance imported successfully",
     "importFailed": "Failed to import instance",
     "deleteTitle": "Delete Instance",
-    "deleteConfirm": "Are you sure you want to delete"
+    "deleteConfirm": "Are you sure you want to delete",
+    "selectInstance": "Select an Instance",
+    "selectInstanceHint": "Choose an instance from the left to view and manage its content",
+    "lastPlayed": "Last played",
+    "installContent": "Install content",
+    "tab": {
+      "content": "Content",
+      "worlds": "Worlds",
+      "logs": "Logs"
+    },
+    "saves": "Saves",
+    "noSaves": "No saves found",
+    "noSavesHint": "Play the game to create your first save",
+    "logsComingSoon": "Logs viewer coming soon"
   },
   "profiles": {
     "title": "Profiles",
@@ -451,7 +467,23 @@
     "installed": "Installed Mods",
     "browse": "Browse Mods",
     "search": "Search mods...",
+    "searchMods": "Search mods...",
     "searchInstalled": "Search installed mods...",
+    "mods": "Mods",
+    "name": "Name",
+    "version": "Version",
+    "enabled": "Enabled",
+    "modsInstalled": "mods installed",
+    "updatesAvailableShort": "updates",
+    "clickInstallContent": "Click 'Install content' to add mods",
+    "unknownAuthor": "Unknown Author",
+    "updateBadge": "Update",
+    "deleteSelected": "Delete Selected",
+    "deleteFailed": "Failed to delete mod",
+    "deleteModTitle": "Delete Mod",
+    "deleteModConfirm": "Are you sure you want to delete this mod?",
+    "modDeleted": "Mod deleted successfully",
+    "modsDeleted": "Mods deleted successfully",
     "allCategories": "All Categories",
     "sortBy": "Sort by",
     "sortRelevancy": "Relevancy",
