--- a/Locales/en-US.json
+++ b/Locales/en-US.json
@@ -65,7 +65,11 @@
       "accentColor": "Accent Color",
       "background": "Background",
       "autoShuffle": "Auto / Shuffle",
-      "current": "Current"
+      "current": "Current",
+      "hideNews": "Hide News Feed",
+      "hideNewsHint": "Hide the news feed from the main menu.",
+      "animatedGlass": "Animated Glass Effects",
+      "animatedGlassHint": "Enable smooth entrance animations for panels and menus. Disable for better performance."
     },
     "languageSettings": {
       "title": "Language Settings",
@@ -216,8 +220,11 @@
     "title": "Mod Manager",
     "installed": "Installed Mods",
     "browse": "Browse Mods",
+    "browseMods": "Browse Mods",
     "search": "Search mods...",
+    "searchMods": "Search mods...",
     "searchInstalled": "Search installed mods...",
+    "searchContent": "Search content...",
     "allCategories": "All Categories",
     "noModsFound": "No mods found",
     "noModsInstalled": "No mods installed",
@@ -228,7 +235,89 @@
     "checkForUpdates": "Check for Updates",
     "allUpToDate": "All mods are up to date!",
     "updatesAvailable": "{0} mod(s) have updates available:",
+    "updatesAvailableShort": "updates",
     "openModsFolder": "Open Mods Folder",
-    "close": "Close"
+    "close": "Close",
+    "installSelected": "Install Selected",
+    "selectForInstall": "Select mods to install",
+    "selectedForInstall": "Selected for installation",
+    "clickInstallContent": "Click \"Install content\" to add mods",
+    "modsInstalled": "mods installed",
+    "updateBadge": "Update",
+    "unknownAuthor": "Unknown Author",
+    "deleteSelected": "Delete Selected",
+    "modDeleted": "Mod deleted",
+    "modsDeleted": "mods deleted",
+    "deleteModTitle": "Delete Mod?",
+    "deleteModConfirm": "Are you sure you want to delete this mod?",
+    "deleteFailed": "Failed to delete mod",
+    "modEnabled": "Mod enabled",
+    "modDisabled": "Mod disabled",
+    "mods": "Mods",
+    "allMods": "All Mods",
+    "resourcePacks": "Resource Packs",
+    "installing": "Installing...",
+    "name": "Name",
+    "version": "Version",
+    "enabled": "Enabled",
+    "downloads": "downloads",
+    "by": "by",
+    "gameVersion": "Game Version",
+    "releaseDate": "Release Date",
+    "selectVersion": "Select a version to install",
+    "installVersion": "Install",
+    "dragDropHint": "Drag and drop mod files here",
+    "dropToInstall": "Drop to install",
+    "downloading": "Downloading...",
+    "releaseType": {
+      "release": "Release",
+      "preRelease": "Pre-Release"
+    }
+  },
+  "instances": {
+    "title": "Instances",
+    "import": "Import",
+    "refresh": "Refresh",
+    "selectInstance": "Select an Instance",
+    "selectInstanceHint": "Choose an instance from the left to view and manage its content",
+    "lastPlayed": "Last played",
+    "play": "Play",
+    "folder": "Folder",
+    "installContent": "Install content",
+    "tab": {
+      "content": "Content",
+      "worlds": "Worlds",
+      "logs": "Logs"
+    },
+    "worldsComingSoon": "Worlds management coming soon",
+    "logsComingSoon": "Logs viewer coming soon",
+    "noMods": "No mods installed",
+    "noInstances": "No instances installed",
+    "getStarted": "Get started by installing some content",
+    "deleteTitle": "Delete Instance?",
+    "deleteConfirm": "Are you sure you want to delete",
+    "deleted": "Instance deleted",
+    "deleteFailed": "Failed to delete instance",
+    "exportedSuccess": "Instance exported successfully",
+    "exportFailed": "Failed to export instance",
+    "importedSuccess": "Instance imported successfully",
+    "importFailed": "Failed to import instance",
+    "saves": "Saves",
+    "noSaves": "No saves found",
+    "noSavesHint": "Play the game to create your first save",
+    "changeIcon": "Change Icon",
+    "iconChanged": "Instance icon changed",
+    "builtInIcons": "Built-in Icons",
+    "customIcon": "Custom Icon"
+  },
+  "common": {
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "export": "Export",
+    "openFolder": "Open Folder",
+    "refresh": "Refresh",
+    "unknown": "Unknown",
+    "latest": "Latest",
+    "preRelease": "Pre-Release"
   }
 }
