Enhance client and server patching functionality
- Added methods to check if the client binary and server JAR are patched
- Implemented restoration of client and server binaries from backups when switching to official servers
- Introduced a new method to restore both client and server binaries in one call
- Updated GameLauncher to handle official server mode and restore originals if previously patched
- Improved error handling and logging during the restoration process
- Integrated CurseForge API for mod discovery, including searching and installing mods
- Added functionality to install local mod files and from base64 content
- Enhanced session management in HytaleAuthService to ensure fresh game session tokens before launch
- Updated profile management to maintain UUID mappings correctly when nick changes

--- a/Frontend/src/assets/locales/en-US.json
+++ b/Frontend/src/assets/locales/en-US.json
@@ -80,6 +80,7 @@
     "educationalOnly": "Educational only.",
     "likeIt": "Like it?",
     "buyIt": "BUY IT",
+    "officialServerBlocked": "Official servers require a purchased game and a Hytale account",
     "buyMeA": "Buy me a",
     "modManager": "Mod Manager",
     "openInstanceFolder": "Open Instance Folder",
@@ -332,7 +333,8 @@
     "tab": {
       "content": "Content",
       "worlds": "Worlds",
-      "logs": "Logs"
+      "logs": "Logs",
+      "browse": "Browse"
     },
     "saves": "Saves",
     "noSaves": "No saves found",
@@ -611,6 +613,14 @@
     "dragModFiles": "Drag mod files or a mod list",
     "updatesAvailableCount": "{{count}} updates available",
     "noDownloadableFiles": "No downloadable files found for the selected mods.",
+    "allMods": "All Mods",
+    "modsSelected": "mod(s) selected",
+    "downloadSelected": "Download Selected",
+    "downloading": "Downloading",
+    "selectVersion": "Select Version",
+    "noFilesAvailable": "No files available",
+    "author": "Author",
+    "downloads": "Downloads",
     "backendRefused": "Backend refused to install this mod. Please try again.",
     "selectExportFolder": "Please select an export folder",
     "exportedZip": "Mods exported as ZIP to {{path}}",
