--- a/Frontend/src/assets/locales/es-ES.json
+++ b/Frontend/src/assets/locales/es-ES.json
@@ -324,7 +324,8 @@
     "tab": {
       "content": "Content",
       "worlds": "Worlds",
-      "logs": "Logs"
+      "logs": "Logs",
+      "browse": "Explorar"
     },
     "saves": "Saves",
     "noSaves": "No saves found",
